# open_world_game

./: .gitignore  Cargo.toml  README.md  web_build.sh
src/: main.rs  pathfinding.rs
web_build/: index.html  kwasm.js
