[package]
name = "open_world_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koi = {git = "https://github.com/kettle11/koi", default-features=false, features=["graphics", "renderer", "ui", "hdri"]}
clatter = {git = "https://github.com/Ralith/clatter"}